# coral_collective

./: .coral-protected  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  Agent Creation Starting point.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_IMPLEMENTATION.md  DOCKER_BUILD_FIX.md  DO_NOT_MODIFY.md  Dockerfile  IDE_OPTIMIZATION_PLAN.md  INTEGRATION.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  MCP_INTEGRATION_COMPLETE.md  MEMORY_SYSTEM_IMPLEMENTATION.md  QUICK_START.md  README.md  SECURITY.md  STRUCTURAL_OPTIMIZATION_REPORT.md  SYSTEM_READINESS_REPORT.md  agent_prompt_service.py  agent_runner.py  claude_interface.py  coral-check.py  coral-init.sh  coral_deploy.py  coral_drop.sh  coral_subagents.json  deploy_coral.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-memory.txt  (+6 more)
.claude/agents/: ai-engineer.md  architect.md  backend.md  compliance.md  devops.md  frontend.md  fullstack.md  qa.md  security.md  technical-writer.md
.github/: CODEOWNERS  SECURITY_CHECKLIST.md  branch-protection.json  dependabot.yml
.github/scripts/: setup-branch-protection.sh
.github/workflows/: ci.yml  dependency-update.yml  release.yml  security.yml  test.yml
agents/: agent_orchestrator.md
agents/core/: base_agent.py  project_architect.md
agents/managers/: agent_manager.py
agents/specialists/: accessibility_specialist.md  ai_ml_specialist.md  analytics_engineer.md  api_designer.md  backend_developer.md  compliance_specialist.md  data_engineer.md  database_specialist.md  devops_deployment.md  frontend_developer.md  full_stack_engineer.md  mobile_developer.md  performance_engineer.md  qa_testing.md  security_specialist.md  site_reliability_engineer.md  ui_designer.md
ai-engineer/: SKILL.md
architect/: SKILL.md
backend/: SKILL.md
compliance/: SKILL.md
config/: agent_compatibility_matrix.md  agents.yaml  model_assignments_2026.yaml
coral_collective/: __init__.py  agent_prompt_service.py  agent_runner.py  project_manager.py
coral_collective/cli/: __init__.py  main.py
coral_collective/config/: __init__.py
coral_collective/mcp/: __init__.py  mcp_client.py
coral_collective/tools/: __init__.py  feedback_collector.py  project_state.py
coral_collective/utils/: __init__.py  version_utils.py
core/: async_agent_runner.py  cache_manager.py  ide_integration.py
devops/: SKILL.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASSESSMENT_WORKFLOW.md  CAPABILITIES_OVERVIEW.md  DEPLOYMENT.md  DEPLOYMENT_VALIDATION.md  FAQ.md  IDE_INTEGRATION.md  MEMORY_SYSTEM_GUIDE.md  PARALLEL_EXECUTION_GUIDE.md  SCRATCHPAD_ACTIVITY_TRACKER_GUIDE.md  TESTING_GUIDE.md  USER_GUIDE.md  memory_system_architecture.md
docs/deployment/: CI_CD_SETUP.md  README.md
docs/learning/: README.md
examples/: mcp_integration_examples.py  memory_system_examples.py  memory_usage_examples.py
examples/web_app_standard/.agent_force/: state.json.example
examples/web_app_standard/docs/: README.md
examples/web_app_standard/docs/api/: endpoints.md
examples/web_app_standard/docs/architecture/: overview.md
examples/web_app_standard/docs/deployment/: README.md
examples/web_app_standard/docs/requirements/: functional.md
frontend/: SKILL.md
fullstack/: SKILL.md
mcp/: .env.example  MCP_SETUP_GUIDE.md  MCP_TROUBLESHOOTING.md  README.md  claude_desktop_config.json  integration_example.py  setup_mcp.sh  test_mcp_client.py
mcp/configs/: README.md
mcp/scripts/: health_check.py  install_mcp_servers.sh  server_monitor.py  server_status.js  start_all_servers.js  stop_all_servers.js  test_servers.js
mcp/servers/: brave_search_server.sh  docker_server.sh  e2b_server.sh  filesystem_server.sh  github_server.sh  memory_server.py  postgres_server.sh
memory/: __init__.py  coral_memory_integration.py  mcp_memory_server.py  memory_architecture.py  memory_enhanced_runner.py  memory_integration.py  memory_retrieval.py  memory_system.py  memory_types.py  migration.py  migration_strategy.py  requirements.txt  setup_memory.sh  vector_store.py
monitoring/: alert_rules.yml  prometheus.yml
providers/: claude.py  codex.py  provider_base.py
qa/: SKILL.md
scripts/: deploy.sh  docker-entrypoint.sh  init-db.sql  validate-deployment.sh
security/: SKILL.md
technical-writer/: SKILL.md
templates/: coral-project-template.json
tests/: conftest.py  test_agent_manager_workflow.py  test_memory_system.py  test_state_persistence.py
tests/e2e/: test_cli_commands.py  test_docker_deployment.py  test_full_pipeline.py
tests/fixtures/: mock_services.py  test_data.py
tests/integration/: test_agent_handoffs.py  test_agent_workflows.py  test_mcp_integration.py  test_memory_integration.py  test_workflows.py
tests/unit/: test_agent_prompt_service.py  test_agent_runner.py  test_agents.py  test_core.py  test_mcp.py  test_mcp_client.py  test_memory_system_extended.py  test_parallel_agent_runner.py  test_project_manager.py  test_tools.py  test_version_utils.py
tools/: agent_mcp_bridge.py  mcp_error_handler.py  mcp_metrics_collector.py  multi_agent_orchestrator.py  runner.py  validate.py
validation/: quality_gates.md
